hphp/hack/test/typecheck/option_mixed.php.exp
File "option_mixed.php", line 4, characters 5-10:
`?mixed` is a redundant typehint - just use `mixed` (Typing[4068])
