hphp/hack/test/typecheck/option_mixed.php
<?hh

function f<T>(): void {
  f<?mixed>();
}
